@@ -4,11 +4,10 @@ Bugs
 
 Small features
 --------------
-- use use the COMMENTS from the base table if there is no COMMENT
-  for the *_list view
 - add a widget for referencing fields where only
   the combo-box is wanted
 - url in templates
+- add meta_fields_align
 
 Big features
 ------------
